--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 google-api-python-client = "^2.81.0"
 isodate = "^0.6.1"
 python-dotenv = "^1.0.0"
+pytest = "^7.2.2"
 
 
 [build-system]
